feat(lint): Add English-only content checker for source files and docs (#66)
Add a new pre-commit hook to enforce English-only content in source
files and documentation, ensuring consistency and accessibility for all
contributors.

Changes:
- Add check_english_only.py script that detects non-English text
(Chinese, Japanese, Korean, Cyrillic, Arabic, Hebrew, Thai)
- Check entire file content across Python, C++, and Markdown files
- Support --exclude parameter for excluding specific directories (e.g.,
future Chinese docs)
- Integrate into pre-commit configuration
- Remove Unicode test cases from test_error.py and test_logging.py to
pass the new check
- Use IDE-friendly error format (file:line message) for easy navigation

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,6 +20,13 @@ repos:
           pass_filenames: false
           exclude: ^examples/block-level/
 
+        - id: check-english-only
+          name: check-english-only
+          entry: python tests/lint/check_english_only.py
+          language: python
+          language_version: python3
+          pass_filenames: false
+
     - repo: https://github.com/pre-commit/pre-commit-hooks
       rev: v4.6.0
       hooks:
