feat(reporter): Add ReportInstrument framework with memory usage report (#319)
Introduce a general-purpose report generation framework under
ir/reporter/, mirroring the verifier architecture with ReportType,
ReportGenerator, and ReportGeneratorRegistry. MemoryReport collects
per-MemorySpace high-water marks for all InCore functions and compares
against backend limits.

ReportInstrument triggers report generation after configurable passes.
compile() automatically enables memory reports after AllocateMemoryAddr,
writing results to build_output/<name>/report/.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,6 +137,11 @@ set(PYPTO_SOURCES
     src/ir/transforms/utils/parent_stmt_analysis.cpp
     src/ir/transforms/visitor.cpp
 
+    # IR - Reporter
+    src/ir/reporter/report.cpp
+    src/ir/reporter/memory_report_generator.cpp
+    src/ir/reporter/report_generator_registry.cpp
+
     # IR - Verifier
     src/ir/verifier/verifier.cpp
     src/ir/verifier/property_verifier_registry.cpp
